issue 1938, update script panel icons, added spacing
http://code.google.com/p/fbug/source/detail?r=3386

--- a/extension/skin/classic/win/firebug.css
+++ b/extension/skin/classic/win/firebug.css
@@ -363,6 +363,7 @@ fbContinueButton has three states:
 #fbContinueButton[breakable="off"],
 #fbBreakOnNextButton[breakable="off"] {
     list-style-image: url(chrome://firebug/skin/win/continue.png);
+    padding-right: 2px;
 }
 /*
 #fbContinueButton:hover:active,
@@ -379,52 +380,65 @@ fbContinueButton has three states:
 #fbContinueButton[breakable="true"],
 #fbBreakOnNextButton[breakable="true"] {
     list-style-image: url(chrome://firebug/skin/win/breakNext.png);
+    padding-right: 2px;
 }
 #fbContinueButton:hover:active[breakable="true"],
 #fbBreakOnNextButton:hover:active[breakable="true"] {
-   list-style-image: url(chrome://firebug/skin/win/breakNextActive.png)
+    list-style-image: url(chrome://firebug/skin/win/breakNextActive.png);
+    padding-right: 2px;
 }
 #fbContinueButton:hover:active[breakable="false"],
 #fbBreakOnNextButton:hover:active[breakable="false"] {
-   list-style-image: url(chrome://firebug/skin/win/breakNextActive.png)
+    list-style-image: url(chrome://firebug/skin/win/breakNextActive.png);
+    padding-right: 2px;
 }
 #fbContinueButton[breakable="false"],
 #fbBreakOnNextButton[breakable="false"] {
-   list-style-image: url(chrome://firebug/skin/win/breakNextArmed.png)
+    list-style-image: url(chrome://firebug/skin/win/breakNextArmed.png);
+    padding-right: 2px;
 }
 
 #fbStepOverButton {
     list-style-image: url(chrome://firebug/skin/win/stepOver.png);
+    padding-right: 2px;
 }
 
 #fbStepOverButton:hover:active {
     list-style-image: url(chrome://firebug/skin/win/stepOverActive.png);
+    padding-right: 2px;
 }
 
 #fbStepOverButton[disabled="true"] {
     list-style-image: url(chrome://firebug/skin/win/stepOverDisabled.png) !important;
+    padding-right: 2px;
 }
 
 #fbStepIntoButton {
     list-style-image: url(chrome://firebug/skin/win/stepInto.png);
+    padding-right: 2px;
 }
 
 #fbStepIntoButton:hover:active {
     list-style-image: url(chrome://firebug/skin/win/stepIntoActive.png);
+    padding-right: 2px;
 }
 
 #fbStepIntoButton[disabled="true"] {
     list-style-image: url(chrome://firebug/skin/win/stepIntoDisabled.png) !important;
+    padding-right: 2px;
 }
 
 #fbStepOutButton {
     list-style-image: url(chrome://firebug/skin/win/stepOut.png);
+    padding-right: 2px;
 }
 
 #fbStepOutButton:hover:active {
     list-style-image: url(chrome://firebug/skin/win/stepOutActive.png);
+    padding-right: 2px;
 }
 
 #fbStepOutButton[disabled="true"] {
     list-style-image: url(chrome://firebug/skin/win/stepOutDisabled.png) !important;
+    padding-right: 2px;
 }
